# DatAlive

./: .env  .env.example  .env.template  .gitattributes  .gitignore  COMPATIBILITY.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  PROMPT_FOR_CLAUDE_DESKTOP.md  README.md  UNIVERSAL-SETUP-README.md  apikeyn8n.md  compatibility-report.txt  datalive-bitacora.md  docker-compose.yml  git-push-script.sh  infrastructure-status-updated.txt  pendientes.md  setup-summary.txt  test-connectivity.json  test-ollama-external.json  test-ollama-fixed.json  test-ollama-http-simple.json  test-ollama-simple.json  test-ollama-webhook.json  test-qdrant-simple.json  test-simple-http.json  test_document.txt  txtlibre.txt
.claude/: settings.local.json
agents/: Dockerfile.unified  requirements.txt  run_tests.py  test_runner_simple.py
apps/: test-interface.html
claude_desktop/: HANDOFF_TO_CLAUDE_DESKTOP.md  README.md  check-infrastructure.sh  fix-infrastructure.sh  fix-results.txt  test-golden-path.sh  upgrade-postgres-pgvector.sh  upgrade-results.txt  verify-pgvector.sh
datalive_agent/: Dockerfile  pyproject.toml  requirements.txt
datalive_agent/n8n_workflows/: README.md  datalive-enhanced-ingestion-workflow.json  datalive-enhanced-query-workflow.json  datalive-ingestion-workflow.json  datalive-query-workflow.json
datalive_agent/n8n_workflows/enhanced/: unified-rag-workflow.json
datalive_agent/n8n_workflows/ingestion/: git-repository-ingestion.json  google-drive-sync.json
datalive_agent/n8n_workflows/optimization/: query-pattern-optimizer.json
datalive_agent/n8n_workflows/test/: hello-world.json  neo4j-connection-test.json  qdrant-test.json
datalive_agent/src/: __init__.py  config.py  main.py
datalive_agent/src/agents/: cag_agent.py  orchestrator.py  rag_agent.py  unified_agent.py
datalive_agent/src/api/: routes.py
datalive_agent/src/config/: settings.py
datalive_agent/src/core/: database.py  embeddings.py  graphiti_client.py  knowledge_graph.py  llm.py  llm_manager.py  logging.py  vector_store.py
datalive_agent/src/ingestion/: pipeline.py
datalive_agent/src/ingestion/extractors/: __init__.py  entity_extractor.py  relationship_extractor.py
datalive_agent/src/ingestion/processors/: __init__.py  base_processor.py  confluence_processor.py  csv_processor.py  excel_processor.py  markdown_processor.py  txt_processor.py
datalive_agent/tests/: __init__.py  conftest.py  run_all_tests.py  test_ingestion.py  test_integration.py  test_system_health.py
doc-processor/: Dockerfile
docker/: Dockerfile.n8n  Dockerfile.test  docker-compose-enhanced.yml  docker-compose-functionality-test.yml  docker-compose.yml  init-n8n-entrypoint.sh
docs/: API.md  ARCHITECTURE.md  ARQUITECTURA_CREDENCIALES.md  CLAUDE.md  CONTEXT_RESET_PROMPT.md  DOCUMENTACION_TECNICA.md  ENV_CONF_README.md  Explicacion.md  (+9 more)
(+138 files in other folders)
