# datalive_agent/pyproject.toml

[tool.poetry]
name = "datalive-agent"
version = "0.1.0"
description = "The core agent for the DataLive Sovereign RAG system."
authors = ["DataLive Principal Architect"]
readme = "README.md"

# --- DEPENDENCIAS DE PRODUCCIÓN ---
# Librerías necesarias para que la aplicación se ejecute.
[tool.poetry.dependencies]
python = "^3.11"

# Web framework and API
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}

# Data validation and settings
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
pydantic-ai = "^0.0.14"

# Database drivers
asyncpg = "^0.29.0"
neo4j = "^5.15.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}

# Vector database and embeddings
qdrant-client = "^1.7.0"
sentence-transformers = "^2.2.2"

# LLM and AI
openai = "^1.6.1"
numpy = "^1.24.0"

# HTTP client
httpx = "^0.27.2"

# Document processing
PyPDF2 = "^3.0.1"
pdfplumber = "^0.10.0"
python-docx = "^1.1.0"
openpyxl = "^3.1.2"
pandas = "^2.1.4"

# External integrations
atlassian-python-api = "^3.41.0"
requests = "^2.31.0"

# NLP and entity processing
spacy = "^3.7.0"

# Advanced temporal analysis (placeholder - implement if needed)

# Monitoring and metrics
prometheus-client = "^0.20.0"


# --- DEPENDENCIAS DE DESARROLLO ---
# Herramientas para pruebas, formateo y análisis de código.
# No se instalan en la imagen final de producción.
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
requests = "^2.32.3" # Para pruebas de integración de la API
ruff = "^0.5.1"     # Linter y formateador de código de alto rendimiento


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"